--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-pi-box/code/rev1/build/
-pi-box/code/rev1/src/Temp.c
-pi-box/code/rev1/.vscode/
+/code/rev1/build/
+/code/rev1/src/Temp.c
+/code/rev1/.vscode/
